--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ def tools = new org.devops.tools()
 
 
 
-String workspace = "/var/lib/jenkins/workspace"
+String workspace = "/opt/jenkins/workspace"
 
 //Pipeline
 pipeline {
