--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ def tools = new org.devops.tools()
 
 
 
-String workspace = "/var/lib/jenkins/workspace"
+String workspace = "/opt/jenkins/workspace"
 
 //Pipeline
 pipeline {
@@ -19,7 +19,7 @@ pipeline {
         timestamps()  //日志会有时间
         skipDefaultCheckout()  //删除隐式checkout scm语句
         disableConcurrentBuilds() //禁止并行
-        timeout(time: 0.1, unit: 'HOURS')  //流水线超时设置1h
+        timeout(time: 1, unit: 'HOURS')  //流水线超时设置1h
     }
 
     stages {
@@ -27,7 +27,7 @@ pipeline {
         stage("GetCode"){ //阶段名称
             when { environment name: 'test', value: 'abcd' }
             steps{  //步骤
-                timeout(time:0.1, unit:"MINUTES"){   //步骤超时时间
+                timeout(time:5, unit:"MINUTES"){   //步骤超时时间
                     script{ //填写运行代码
                         println('获取代码')
                         tools.PrintMes("获取代码",'green')
@@ -46,7 +46,7 @@ pipeline {
                 //构建
                 stage("Build"){
                     steps{
-                        timeout(time:0.1, unit:"MINUTES"){
+                        timeout(time:20, unit:"MINUTES"){
                             script{
                                 println('应用打包')
                                 tools.PrintMes("应用打包",'green')
@@ -62,7 +62,7 @@ pipeline {
                 //代码扫描
                 stage("CodeScan"){
                     steps{
-                        timeout(time:0.1, unit:"MINUTES"){
+                        timeout(time:30, unit:"MINUTES"){
                             script{
                                 print("代码扫描")
                                 tools.PrintMes("代码扫描",'green')
